[web] add line bot qrcode and telegram bot link

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -5,3 +5,15 @@ body {
 a {
   color: #00B7FF;
 }
+
+.line-btn, .line-btn a {
+  color: #00b900;
+}
+
+.tele-btn, .tele-btn a {
+  color: #2e87ca;
+}
+
+.app_btn img{
+  height: 20px;
+}
